--- a/src/containers/app.css
+++ b/src/containers/app.css
@@ -1,3 +1,12 @@
 .container {
   /*App container styles belongs here*/
+  background:#222;
+  position:relative;
+  height:100%;
+  width:100%;
+}
+
+.text{
+  color:#999
+
 }
